# 1337-talent-assesment-scraper

./: .gitignore  README.md  brakerrr.py  requirements.txt  setup.cfg
src/scraper/: main.py
tests/scraper/: main.py
