[metadata]
name = 1337-talent-assesment-scraper-videvide
version = 0.0.1
author = Vide Krajnc
author_email = vide@hey.com
description = 1337 talent assesment
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/videvide/1337-talent-assesment-scraper
project_urls =
    Bug Tracker = https://github.com/videvide/1337-talent-assesment-scraper/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src